--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="login-box">
-            <h1>Face Recognition Login</h1>
+            <h1>Two Step Login</h1>
             <div class="video-container">
                 <video id="video" width="640" height="480" autoplay></video>
                 <canvas id="canvas" width="640" height="480"></canvas>
@@ -23,7 +23,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
-    <script src="utilities.js"></script>
     <script src="app.js"></script>
 </body>
 </html> 
